ml-models-kserve-configs/toxicity-model/toxicity-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: toxicity-gateway
  namespace: dev
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - toxicity.dev.curieo.org
    port:
      name: http
      number: 80
      protocol: HTTP
