ml-models-kserve-configs/toxicity-model/toxicity-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: toxicity-virtualservice
  namespace: dev
spec:
  gateways:
  - toxicity-gateway
  hosts:
  - toxicity.dev.curieo.ai
  http:
  - match:
    - port: 80
    route:
    - destination:
        host: istio-ingressgateway.istio-system.svc.cluster.local
        port:
          number: 80
